<resources>
    <string name="app_name">User Settings</string>

    <!--Main-->
    <string name="hint_building">Edificio</string>
    <string name="hint_floor">Piso</string>
    <string name="hint_desk">Escritorio</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_load">Cargar</string>
    <string name="btn_save">Guardar</string>
</resources>
